﻿1.15.64.alpha.1 - 27th November 2024
- For 'Enhance minimap' ('Interface'), added a new setting that lets you hide the Looking for Group button while you are not queued.  This only applies to game realms with a Looking for Group feature.

1.15.62 - 20th November 2024
- For 'Enhance minimap' ('Interface'), fixed the position and scale of the new SoD and anniversary LFG minimap button when using the square minimap setting.
- Added flight times.

1.15.61 - 20th November 2024
- Updated for game version 1.15.5.
- Added flight times.

1.15.59 - 13th November 2024
- Game API updates.
- For 'Enhance minimap' ('Interface'), fixed an issue with 'Hide the clock' which sometimes caused the setting to be ignored.
- Added flight times.

1.15.58 - 6th November 2024
- For 'Show player chain' ('Interface'), fixed an issue which caused the rare elite chain level indiciator texture to be wider than intended.
- Added flight times.

1.15.57 - 30th October 2024
- Added flight times.

1.15.56 - 23rd October 2024
- Added flight times.

1.15.54 - 9th October 2024
- For 'Enhance minimap' ('Interface'), improved compatibility with Zygor minimap button notifications.

1.15.53 - 2nd October 2024
- Game API updates.
- Added flight times.

1.15.52 - 25th September 2024
- Fix for the Lua error with 'Show auction controls' ('Interface').

1.15.51 - 25th September 2024
- Updated for game version 1.15.4.
- Added flight times.

1.15.49 - 18th September 2024
- Added flight times.

1.15.48 - 11th September 2024
- PTR (1.15.4): Game API updates.
- Added flight times.

1.15.47 - 4th September 2024
- PTR (1.15.4): Preliminary updates for PTR game version 1.15.4.
- For 'Show player chain' ('Interface'), the default game texture will now be used for the rare elite chain.
- Added flight times.

1.15.45 - 21st August 2024
- For 'Enhance minimap' ('Interface'), the 'MoveAny' addon button will now show in the combine addon buttons frame.
- Added flight times.

1.15.44 - 14th August 2024
- Added flight times.
