@@ -1,5 +1,7 @@
 ﻿1.15.64.alpha.1 - 27th November 2024
-- For 'Enhance minimap' ('Interface'), added a new setting that lets you hide the Looking for Group button while you are not queued.  This only applies to game realms with a Looking for Group feature.
+- For 'Enhance minimap' ('Interface'), added a new setting that lets you hide the Looking for Group button while you are not queued.  This only applies to game realms with the Looking for Group feature.
+- The 'Party from friends' and 'Invite from whispers' options ('Social') now check to ensure you are not queued in the Looking for Group feature.  On realms without the Looking for Group feature, the options only ensure you are not queued for a battleground as before.
+- Added flight times.
 
 1.15.62 - 20th November 2024
 - For 'Enhance minimap' ('Interface'), fixed the position and scale of the new SoD and anniversary LFG minimap button when using the square minimap setting.
